Add strings to strings.xml

--- a/app/src/main/res/layout/fragment_add_product_nutrition_facts.xml
+++ b/app/src/main/res/layout/fragment_add_product_nutrition_facts.xml
@@ -167,7 +167,7 @@
                 android:layout_marginTop="@dimen/spacing_small"
                 android:layout_marginEnd="85dp"
                 android:layout_marginRight="85dp"
-                android:text="Max value can be 2000kcal/100g"
+                android:text="@string/max_energy_val_msg"
                 android:textColor="@color/red"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -221,7 +221,7 @@
                 android:layout_marginTop="@dimen/spacing_small"
                 android:layout_marginEnd="85dp"
                 android:layout_marginRight="85dp"
-                android:text="Value entered is more than given per serving size"
+                android:text="@string/max_nutrient_val_msg"
                 android:textColor="@color/red"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -275,7 +275,7 @@
                 android:layout_marginTop="@dimen/spacing_small"
                 android:layout_marginEnd="85dp"
                 android:layout_marginRight="85dp"
-                android:text="Value entered is more than given per serving size"
+                android:text="@string/max_nutrient_val_msg"
                 android:textColor="@color/red"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -329,7 +329,7 @@
                 android:layout_marginTop="@dimen/spacing_small"
                 android:layout_marginEnd="85dp"
                 android:layout_marginRight="85dp"
-                android:text="Value entered is more than given per serving size"
+                android:text="@string/max_nutrient_val_msg"
                 android:textColor="@color/red"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -383,7 +383,7 @@
                 android:layout_marginTop="@dimen/spacing_small"
                 android:layout_marginEnd="85dp"
                 android:layout_marginRight="85dp"
-                android:text="Value entered is more than given per serving size"
+                android:text="@string/max_nutrient_val_msg"
                 android:textColor="@color/red"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -437,7 +437,7 @@
                 android:layout_marginTop="@dimen/spacing_small"
                 android:layout_marginEnd="85dp"
                 android:layout_marginRight="85dp"
-                android:text="Value entered is more than given per serving size"
+                android:text="@string/max_nutrient_val_msg"
                 android:textColor="@color/red"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -491,7 +491,7 @@
                 android:layout_marginTop="@dimen/spacing_small"
                 android:layout_marginEnd="85dp"
                 android:layout_marginRight="85dp"
-                android:text="Value entered is more than given per serving size"
+                android:text="@string/max_nutrient_val_msg"
                 android:textColor="@color/red"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -545,7 +545,7 @@
                 android:layout_marginTop="@dimen/spacing_small"
                 android:layout_marginEnd="85dp"
                 android:layout_marginRight="85dp"
-                android:text="Value entered is more than given per serving size"
+                android:text="@string/max_nutrient_val_msg"
                 android:textColor="@color/red"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -599,7 +599,7 @@
                 android:layout_marginTop="@dimen/spacing_small"
                 android:layout_marginEnd="85dp"
                 android:layout_marginRight="85dp"
-                android:text="Value entered is more than given per serving size"
+                android:text="@string/max_nutrient_val_msg"
                 android:textColor="@color/red"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
