--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -11,6 +11,18 @@
             android:summary="@string/prefs_language_summary"
             android:title="@string/prefs_language" />
 
+        <ListPreference
+            android:dialogTitle="Choose your preferred units for energy for the nutrition table"
+            android:key="energyUnitPreference"
+            android:summary="Choose your preferred units for energy for the nutrition table"
+            android:title="Preferred unit for energy" />
+
+        <ListPreference
+            android:dialogTitle="Choose your preferred units for volume for the nutrition table"
+            android:key="volumeUnitPreference"
+            android:summary="Choose your preferred units for volume for the nutrition table"
+            android:title="Preferred unit for volume" />
+
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="startScan"
@@ -52,7 +64,7 @@
             android:defaultValue="false"
             android:key="disableImageLoad"
             android:summary="@string/disable_image_loading"
-            android:title="@string/DisableLoadTitle"/>
+            android:title="@string/DisableLoadTitle" />
 
     </PreferenceCategory>
 
@@ -75,13 +87,13 @@
             android:defaultValue="false"
             android:key="contributionTab"
             android:summary="@string/contribution_tab_summary"
-            android:title="@string/contribution_tab_title"/>
+            android:title="@string/contribution_tab_title" />
 
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="photoMode"
-            android:title="@string/preference_show_all_product_photos_title"
-            android:summary="@string/preference_show_all_product_photos_summary" />
+            android:summary="@string/preference_show_all_product_photos_summary"
+            android:title="@string/preference_show_all_product_photos_title" />
 
     </PreferenceCategory>
 
