Add marginBottom to product name

--- a/app/src/main/res/layout/fragment_summary_product.xml
+++ b/app/src/main/res/layout/fragment_summary_product.xml
@@ -213,6 +213,7 @@
                         android:layout_marginLeft="@dimen/spacing_normal"
                         android:layout_marginRight="@dimen/spacing_normal"
                         android:layout_marginTop="@dimen/spacing_tiny"
+                        android:layout_marginBottom="@dimen/spacing_small"
                         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                         android:textIsSelectable="true"
                         android:textStyle="bold" />
@@ -221,7 +222,7 @@
                         android:id="@+id/textGenericNameProduct"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/spacing_tiny"
+                        android:layout_marginBottom="@dimen/spacing_small"
                         android:layout_marginLeft="@dimen/spacing_normal"
                         android:layout_marginRight="@dimen/spacing_normal"
                         android:paddingBottom="@dimen/spacing_small"
