Fixes: #2168, Origin of ingredients is not clickable

--- a/app/src/main/res/layout/fragment_summary_product.xml
+++ b/app/src/main/res/layout/fragment_summary_product.xml
@@ -456,6 +456,7 @@
                         android:layout_marginRight="@dimen/spacing_normal"
                         android:layout_marginTop="@dimen/spacing_tiny"
                         android:padding="@dimen/padding_too_short"
+                        android:textColorLink="@color/light_blue_A700"
                         android:textIsSelectable="true"
                         android:textSize="@dimen/font_normal" />
 
@@ -468,6 +469,7 @@
                         android:layout_marginRight="@dimen/spacing_normal"
                         android:layout_marginTop="@dimen/spacing_tiny"
                         android:padding="@dimen/padding_too_short"
+                        android:textColorLink="@color/light_blue_A700"
                         android:textIsSelectable="true"
                         android:textSize="@dimen/font_normal"
                         android:visibility="gone" />
